tutorial/level_1/M3_application_deployment/1_new_app_s2i/manifests/deployment.yaml
# Kubernetes-style Deployment for nginx (non-root, OpenShift-compatible)
# This is the manual equivalent of: oc new-app --name=nginx-manifest --image=bitnami/nginx
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-manifest
  labels:
    app: nginx-manifest
    tutorial-level: "1"
    tutorial-module: "M3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-manifest
  template:
    metadata:
      labels:
        app: nginx-manifest
    spec:
      containers:
        - name: nginx
          image: bitnami/nginx:latest
          ports:
            - containerPort: 8080
              protocol: TCP
