tutorial/level_1/M3_application_deployment/1_new_app_s2i/manifests/service.yaml
# Service for the nginx Deployment
# Provides internal cluster networking (ClusterIP) to the nginx pods
apiVersion: v1
kind: Service
metadata:
  name: nginx-manifest
  labels:
    app: nginx-manifest
    tutorial-level: "1"
    tutorial-module: "M3"
spec:
  selector:
    app: nginx-manifest
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
